# nunomaduro.com

./: .env.example  .gitignore  Cargo.toml  Makefile  SECURITY.md  artisan  opencode.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/: dependabot.yml
.github/workflows/: tests.yml
application/: Cargo.toml
application/src/http/: mod.rs  router.rs
application/src/http/routes/: about.rs  feed.rs  health.rs  mod.rs  newsletter.rs  not_found.rs  post.rs  posts.rs  sitemap.rs  socials.rs  sponsorships.rs  subscribe.rs  subscribe.sh  support.rs  talks.rs
application/src/http/routes/api/v1/newsletter/: mod.rs  post.rs
application/src/http/routes/posts/: index.rs  mod.rs  show.rs
content/: about.md  newsletter.md  posts.md  socials.md  sponsorships.md  support.md  talks.md
content/drafts/: short_closures_rfc_explained.md
content/posts/: 1.md  10.md  11.md  12.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  laravel_pint_agent_format.md  pest-v4-5-is-out-flaky-tests-arch-casing-only-covered.md  pest-with-host-browser-testing-subdomains-laravel.md  pest_browser_testing_with_host.md
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/contracts/: mod.rs  newsletter_repository.rs  post_repository.rs  static_repository.rs
domain/src/value_objects/: list_page.rs  mod.rs  post.rs  post_page.rs  static_page.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
presentation/: Cargo.toml
presentation/css/: main.css
presentation/js/: main.js  newsletter.js
presentation/templates/: about.html  feed.xml  newsletter.html  post.html  posts.html  sitemap.xml  socials.html  support.html  talks.html
public/: app.css  robots.txt  site.webmanifest  sitemap.xml
public/css/: app.css
public/js/: app.js
scripts/: generate-og-images.js  update-social.js
(+30 files in other folders)
